packages/example/src/errors/base.ts
export class BaseError extends Error {
  code: number | string;
  constructor(code: number | string) {
    super();
    this.code = code;
  }
  resolve = (fn: Function) => {
    fn();
  };
}
